# cap-color-detector

./: .gitignore  Compare_Analysist_Model.ipynb  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bsort/: bsort.py  cli.py  inference.py  trainer.py  utils.py  wandb_utils.py
configs/: yolov11m.yaml  yolov11n.yaml  yolov11s.yaml  yolov12m.yaml  yolov12n.yaml  yolov12s.yaml
notebooks/: model_development.ipynb
test/: test_inference_mocked.py  test_inference_real.py
yolov11/medium/final_v11_medium/: args.yaml  results.csv
yolov11/nano/final_v11_nano/: args.yaml  results.csv
yolov11/small/final_v11_small/: args.yaml  results.csv
yolov12/medium/final_v12_medium/: args.yaml  results.csv
yolov12/nano/final_v12_nano/: args.yaml  results.csv
yolov12/small/final_v12_small/: args.yaml  results.csv
